radiant-player-mac/css/yosemite.css
/*
 * css/yosemite.css
 *
 * Custom stylesheet that emulates the appearance of a native Mac OS X Yosemite application.
 *
 * Created by Sajid Anwar.
 *
 * Subject to terms and conditions in LICENSE.md.
 *
 */

body {
    background: none !important;
}

#main, #content, #music-content, .song-row td {
    background-color: white;
}

#loading-progress {
    background: none !important;
}

#loading-progress-content {
    top: 40%;
}

#loading-progress-message {
    color: #444;
    text-align: center;
}

#loading-progress-bar {
    height: 3px;
}

#current-loading-progress {
    height: 3px;
}

.g-doc {
    height: -webkit-calc(100% - 60px) !important;
    height: calc(100% - 60px) !important;
}

.card {
    background-color: #f8f8f8;
}

.header + .song-table {
    margin-top: 0;
}

.song-table {
    padding: 0;
    margin-right: -20px;
    margin-left: -20px;
    margin-top: -20px;
    width: calc(100% + 34px)
}

.song-table .header-row th {
    background: -webkit-linear-gradient(90deg, #f1f1f1, #d8d8d8);
    background: linear-gradient(0deg, #f1f1f1, #d8d8d8);
    border-bottom: 1px solid #CCCCCC;
    height: 26px;
    text-transform: none;
    border-right: 1px solid #BABABA;
    border-left: 1px solid #EAEAEA;
}

.song-row:nth-child(odd) td {
    background-color: #F4F7FB !important;
}

.song-row img {
    height: 26px !important;
    width: 26px !important;
    visibility: hidden;
}

.song-row .song-indicator {
    width: 32px !important;
    height: 26px !important;
}

.song-row .song-indicator[data-playback-status="loading"] {
    background-position: -4px -7px;
}

.song-row .song-indicator[data-playback-status="paused"] {
    /*background-position: -404px -2193px;*/
}

.song-row td {
    height: 26px;
    min-height: 26px;
    max-height: 26px;
    line-height: 26px;
    border: none;
    font-size: 12px;
    color: black;
    border-right: 1px solid #EAEAEA;
    cursor: default;
    background-color: white !important;
}

.song-row.selected-song-row td {
    color: white !important;
    background-color: #ff8200 !important;
}

.song-row.selected-song-row .song-indicator {
    -webkit-filter: brightness(0%) invert(100%);
    background-color: transparent;
}

.song-row .hover-button[data-id=play] {
    height: 26px !important;
    width: 26px !important;
    background-position: -1377px -1367px;
    display: none;
}

.song-row .hover-button {
    margin-top: 1px;
}

.song-row .explicit {
    margin-top: 8px;
}

.song-row .rating-container.stars {
    height: 100% !important;
    line-height: 50%;
}

.song-row .rating-container.thumbs [data-rating] {
    margin-top: 0px;
}

.song-row .hover-button[data-id="menu"], .song-row .hover-button[data-id="menu"]:hover {
    margin: 1px 0 0 0;
    border: none;
    border-radius: 0;
}

.song-row.selected-song-row .hover-button[data-id="menu"] {
    background-color: transparent !important;
    -webkit-filter: brightness(20%) invert(100%);
}

.music-banner {
    display: none;
}

#nav {
    top: 0;
    background: none;
    border-right: 1px solid #bbb;
    width: auto;
    margin: 0;
}

#nav_collections .nav-item-container, .nav-item-container {
    font-size: 13px !important;
    font-weight: 400 !important;
    color: #333 !important;
    height: 26px !important;
    line-height: 26px !important;
    cursor: default !important;
}

#nav_collections .nav-item-container.selected, .nav-item-container.selected, .nav-item-container.selected:focus, .nav-item-container.selected:hover {
    background: #ff9d20 !important;
    color: white !important;
    font-weight: 500 !important;
}

.nav-item-container:hover {
    background: none;
}

.nav-section-header {
    padding-left: 10px;
    font-weight: bold;
    color: #66717F;
    text-shadow: 0px 1px 0px #FCFAFF;
}

.nav-section-divider {
    display: none;
}

.nav-item-container:hover .playlistDropDown, .nav-item-container:hover .playlistDropDown:hover, .nav-item-container.selected .playlistDropDown, .nav-item-container.selected .playlistDropDown:hover {
    background-color: transparent !important;
    margin-top: 1px !important;
}

.nav-item-container.selected .playlistDropDown, .nav-item-container.selected .playlistDropDown:hover {
    -webkit-filter: brightness(20%) invert(100%);
}

.nav-bar .header-tab-title.selected {
    border: 1px solid #aaa;
    border-radius: 20px;
    background-image: -webkit-linear-gradient(90deg, #f8f8f8, #e0e0e0);
    background-image: linear-gradient(0deg, #f8f8f8, #e0e0e0);
    -webkit-box-shadow: inset 0px 1px 1px #bbb;
    box-shadow: inset 0px 1px 1px #bbb;
}

.nav-bar .header-tab-title {
    height: 28px;
    line-height: 29px;
    margin-top: 8px;
    cursor: default;
}

.nav-bar .header-tab-title:hover {
    background-color: transparent;
}

.nav-bar #breadcrumbs {
    background: none;
}

.nav-bar {
    background: transparent;
    background-image: linear-gradient(0deg, rgba(250, 250, 250, 0.95), rgba(255, 255, 255, 0.95));
}

#headerBar {
    background: transparent;
    z-index: 1;
}

#content {
    top: 0px;
    padding-top: 48px;
}

.fade-out:after {
    background: none !important;
}

#player, .player-middle {
    background: none;
    box-shadow: none;
    border-top: none;
}

#top_divider_line {
    height: 1px;
    background-color: #bbb;
}

.player-middle {
    padding: 3px 0 0 0;
    margin: 0;
}

#playerSongInfo {
    overflow: hidden;
}

#playerSongInfo .text-wrapper #playerSongTitle {
    margin-right: 110px;
}

#player .flat-button, #player .flat-button:hover, #player .flat-button:active {
    background-color: transparent !important;
}

.now-playing-menu-wrapper {
    background: none;
}

#player [data-id="now-playing-menu"] {
    border: none;
}

#player .rating-container.thumbs li.selected:hover, #player .rating-container.thumbs li:hover {
    background-color: transparent;
}

#volume:hover, #volume.simulated-hover {
    background: none !important;
}

#volume #vslider, #volume #volume_low, #volume #volume_high {
    opacity: 1 !important;
}

#oneGoogleWrapper > div:first-child > div:first-child {
    background: -webkit-linear-gradient(90deg, #d6d0d6, #edeaed);
    background: linear-gradient(0deg, #d6d0d6, #edeaed);
    border-bottom: 1px solid #888;
    height: 59px;
}

#oneGoogleWrapper > div:first-child > div:first-child > div:first-child {
    min-width: 0px !important;
}

#oneGoogleWrapper > div:first-child > div:first-child > div:nth-child(2) {
    margin-left: 100px !important;
    margin-right: 30px !important;
    min-width: 0px;
}

#oneGoogleWrapper > div:first-child > div:first-child > div:nth-child(2) > div:first-child {
    position: static;
    padding: 0;
}

.gbqfqw {
    border-radius: 3px;
    border-color: #ccc;
    border-bottom: 1px solid #bbb;
    border-top: 1px solid #ddd;
    border-right-width: 1px;
    background: #fcfcfc;
}

.gbqfqw:hover {
    border-color: #ccc !important;
    border-bottom: 1px solid #bbb !important;
    border-top: 1px solid #ddd !important;
    border-right-width: 1px;
}

.gbqfqw:active, .gbqfqw.gbqfqwf {
    border-color: #4285f4 !important;
}

#gbqfb {
    border: none;
    width: 24px;
    min-width: 24px;
    margin-left: -35px;
    position: absolute;
    height: 24px;
    background: transparent;
    -webkit-filter: invert(50%);
}

#gbqfb:active:active {
    border: none;
    -webkit-box-shadow: none;
    box-shadow: none;
    background: transparent;
    filter: none;
    -webkit-filter: invert(80%);
}

#gbqfb:hover {
    -webkit-box-shadow: none;
    box-shadow: none;
}

.gbqfi.gb_g {
    width: 24px;
    height: 24px;
    background-position: -211px -246px;
}

#gbqfq {
    margin-top: 5px !important;
    padding-left: 2px !important;
    font-size: 14px !important;
    cursor: default;
    text-align: center;
}

#gbqfq:focus {
    cursor: text;
    text-align: left;
}

div.simple-dialog-bg {
    opacity: 0.01 !important;
    background-color: transparent;
}

.simple-dialog {
    -webkit-animation-duration: 0.8s;
    -webkit-animation-name: slidedown;
    -webkit-animation-timing-function: ease-out;
    overflow: hidden;
    top: 60px !important;
    border-radius: 0 0 5px 5px;
    border-top-width: 0;
    background-color: rgba(240,240,240,0.98);
}

@-webkit-keyframes slidedown {
   from {
      max-height: 0%; 
   }

   to {
      max-height: 100%;
   }
}

.simple-dialog-title, .simple-dialog-content {
    background-color: transparent;
}

.butter-bar-container {
    top: 0;
}

.song-table [data-col="index"] .content, 
.song-table [data-col="track"] .content {
    color: inherit;
}

.song-row.currently-playing td[data-col="track"] span,
.song-row.currently-playing td[data-col="index"] span {
    visibility: collapse;
}

.song-row.currently-playing td[data-col="track"] span > div,
.song-row.currently-playing td[data-col="index"] span > div {
    visibility: visible;
}

.gm-nav-button {
    border-radius: 3px;
    background-color: #fcfcfc;
    opacity: 1;
    border-bottom: 1px solid #bbb;
    border-top: 1px solid #ddd;
    margin-left:0;
    margin-right: 0;
    
    background-size: 12px 16px;
    background-position: 9px 6px;
    background-repeat: no-repeat;
}

.gm-nav-button:hover {
    opacity: 1;
}

.gm-nav-button:active {
    opacity: 1;
    background-color: #eee;
}

#gm-back {
    background-image: url(http://radiant-player-mac/images/arrow-left-yosemite.png);
}

#gm-forward {
    background-image: url(http://radiant-player-mac/images/arrow-right-yosemite.png);
}

::-webkit-scrollbar {
    width: 10px !important;
}

::-webkit-scrollbar-thumb {
    border-width: 1px !important;
    border-radius: 6px !important;
}

::-webkit-scrollbar-track {
    border-width: 0 !important;
}

